--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  
+  <meta name="keywords" content="ml,machine learning">
   <link rel="stylesheet" href="style.css">
   <title>Python</title>
 </head>
